# create-your-own-api-assistant-cisco-catalyst-center

./: .env  ImportData.py  LICENSE.md  README.md  TalkToDatabase.py  TalkToOllama.py  TalkToOpenAI.py  chainlit.md  main.py  pyproject.toml
.chainlit/: config.toml
data/: GA-2-3-7-swagger-v1.annotated.json  extended_apispecs_documentation.json
