[tool.poetry]
package-mode = false
name = "create-your-own-api-assistant-cisco-catalyst-center"
version = "0.1.0"
description = ""
authors = ["flopach <florian.pachinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.6"
ollama = "^0.1.9"
requests = "^2.31.0"
chromadb = "^0.5.0"
chainlit = "^1.0.505"
pymupdf = "^1.24.2"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"